<resources>
    <string name="app_name">FoodFlow</string>
    <string name="welcome_back">¡Bienvenido a FoodFlow!</string>
    <string name="login_to_continue">Inicia sesión para continuar</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar sesión</string>
    <string name="forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="dont_have_account">¿No tienes una cuenta?</string>
    <string name="sign_up">Regístrate aquí</string>

    <string name="create_account">Crear Cuenta</string>
    <string name="full_name">Nombre Completo</string>
    <string name="confirm_password">Confirmar Contraseña</string>
    <string name="already_have_account">¿Ya tienes una cuenta?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipe_image">Imagen de la receta</string>
    <string name="cambiar_imagen">Cambiar imagen</string>
    <string name="nombre_receta">Nombre de la receta</string>
    <string name="ingredientes">Ingredientes</string>
    <string name="pasos_preparacion">Pasos de preparación</string>
    <string name="eliminar">Eliminar</string>
    <string name="cancelar">Cancelar</string>
    <string name="guardar">Guardar cambios</string>
</resources>